# pyhw

./: mypy.ini  pyproject.toml
pyhw/: book.py  car.py  item.py  main.py  stadium.py
scripts/: run.py
