[tool.poetry]
name = "pyhw"
version = "0.1.0"
description = ""
authors = ["intervinn <69168328+intervinn@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.run:start"